--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "@react-google-maps/api": "^2.19.2",
     "@types/node": "20.6.2",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "google-map-react": "^2.2.1",
+    "highcharts": "^11.1.0",
+    "highcharts-react-official": "^3.2.1",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
